; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_type.c_ProcessCreateEnumStmt.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_type.c_ProcessCreateEnumStmt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ProcessCreateEnumStmt(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  store i32* null, i32** %5, align 8
  %6 = call i32 (...) @ShouldPropagateTypeCreate()
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %2
  br label %16

9:                                                ; preds = %2
  %10 = load i32*, i32** %3, align 8
  %11 = call i32* @GetObjectAddressFromParseTree(i32* %10, i32 0)
  store i32* %11, i32** %5, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @EnsureDependenciesExistsOnAllNodes(i32* %12)
  %14 = load i32*, i32** %5, align 8
  %15 = call i32 @MarkObjectDistributed(i32* %14)
  br label %16

16:                                               ; preds = %9, %8
  ret void
}

declare dso_local i32 @ShouldPropagateTypeCreate(...) #1

declare dso_local i32* @GetObjectAddressFromParseTree(i32*, i32) #1

declare dso_local i32 @EnsureDependenciesExistsOnAllNodes(i32*) #1

declare dso_local i32 @MarkObjectDistributed(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
